# esp32c6lp-hal

./: .gitignore  Cargo.toml  README.md  build.bat
.cargo/: config.toml
examples/: basic.rs
src/: delay.rs  gpio.rs  lib.rs  prelude.rs
