[package]
name = "esp32c6lp-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
esp32c6-lp = { git = "https://github.com/bjoernQ/esp-pacs.git", features = ["critical-section"] }
critical-section = { version = "1.1.1", features = ["restore-state-u8"] }
riscv = "0.10.1"
riscv-rt-macros = "0.2.0"
embedded-hal = "0.2.6"

paste = "1.0.14"

[dev-dependencies]
panic-halt = "0.2.0"
